CKA-CKS-CKAD/pods/cka_pvc/cka-Q12-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  securityContext:
    runAsUser: 34
    runAsGroup: 42
  containers:
    - args:
        - sleep
        - 10m
      image: nginx
      name: nginx
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          add: ["NET_ADMIN"]
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
