CKA-CKS-CKAD/pods/cka_pvc/cka-q16-httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cka-q16-httpd # update name
  labels:
    app: cka-q16-httpd # update label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cka-q16-httpd # update label
  template:
    metadata:
      labels:
        app: cka-q16-httpd
    spec:
      containers:
        - name: httpd
          image: httpd
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            exec:
              command:
                - "true"
