CKA-CKS-CKAD/pods/cka_pvc/q1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    exam: cka
    question: "1"
  name: busy-time
  namespace: busy
spec:
  containers:
    - image: nginx:alpine3.18-slim
      name: busy-time-container
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  nodeSelector:
    node-role.kubernetes.io/control-plane: ""
  tolerations:
    - effect: NoSchedule
      key: node-role.kubernetes.io/control-plane
status: {}
